Creating view with collection name greater than 64 characters crashes with uassert

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.1.0-rc0, 7.0.0-rc1
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Server Serverless 2023-05-01
    • 135
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When creating a view, the server accidentally creates a NamespaceString with just the viewOn collection name, which will no longer permit string larger than 64 characters due to this newly added validation introduced in SERVER-75529.

            Assignee:
            Matt Broadstone
            Reporter:
            Matt Broadstone
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: