SERVER-76632 Use view db when validating viewOn collection name